[package]
name = "webhookrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
openssl = { version = "0.10.52", features = ["vendored"] }
lambda_runtime = "0.8.0"
lambda_http = "0.8.0"
tokio = { version = "1", features = ["full"] }
liquid = "0.26.3"
lazy-static-include = "3.2.0"
